adding script for compilation

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-APIToken = ""
-CASPTMPublicKey = ""
-CASPEthPublicKey = ""
-CASPVaultID = ""
-CASPURL = ""
+APIToken=
+CASPTMPublicKey=
+CASPEthPublicKey=
+CASPVaultID=
+CASPURL=
