--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -64,5 +64,24 @@ jobs:
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
       - name: Get dependancies
         run: make deps
-      - name: Run tests
+      - name: Run unit tests
         run: make units
+
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          stable: 'false'
+          go-version: '^1.17'
+      - name: go env
+        run: |
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+      - name: Get dependancies
+        run: make deps
+      - name: Build
+        run: make
