--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -96,4 +96,4 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: informalsystems/gosec@master
         with:
-          args: -quiet -test -gosec ./...
+          args: -quiet -tests -gosec ./...
