--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: technote-space/get-diff-action@v4
         with:
-          PATTERN: |
+          PATTERNS: |
             .go
             .mod
             .sum
